[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0.0-beta.5"
eyre = "0.6"
tools = { path = "../tools" }
day-01 = { path = "../01" }
day-02 = { path = "../02" }
day-03 = { path = "../03" }
day-04 = { path = "../04" }
day-05 = { path = "../05" }
day-06 = { path = "../06" }
day-07 = { path = "../07" }
day-08 = { path = "../08" }
day-09 = { path = "../09" }
day-10 = { path = "../10" }
day-11 = { path = "../11" }
day-12 = { path = "../12" }
day-13 = { path = "../13" }
day-14 = { path = "../14" }
day-15 = { path = "../15" }
day-16 = { path = "../16" }
day-17 = { path = "../17" }
day-18 = { path = "../18" }
day-19 = { path = "../19" }
day-20 = { path = "../20" }
day-21 = { path = "../21" }
day-22 = { path = "../22" }
day-23 = { path = "../23" }
day-24 = { path = "../24" }
day-25 = { path = "../25" }